<resources>
    <string name="app_name">OrthopaedicAcceptanceTerminal</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="please_input_user_name">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_select_room">请选择科室</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="copyright">Copyright ©Rivamed Corporation, All Rights Reserved</string>
    <string name="version_code">V2.0</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="home_funcation">订单查询</string>
</resources>
