<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@color/pg_block">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="欢迎登录骨科耗材管理系统"
            android:textColor="#ffffffff"
            android:textSize="@dimen/font_size_26" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:layout_marginLeft="@dimen/margin_28dp"
        android:layout_marginRight="@dimen/margin_28dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/shap_white_rec"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_top_logo"
            android:layout_width="310dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_26dp"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/tv_login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="请输入正确的账号或密码"
            android:textColor="@color/color_login_orange"
            android:textSize="@dimen/font_size_13"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="28dp"
                android:layout_height="@dimen/margin_28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_18dp"
                android:src="@drawable/selector_user_name" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:singleLine="true"
                android:layout_marginRight="59dp"
                android:background="@null"
                android:nextFocusForward="@+id/et_password"
                android:digits="0123456789abcdefjhigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/please_input_user_name"
                android:inputType="text"
                android:textColor="@color/text_black"
                android:imeOptions="actionNext"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/font_size_24" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_18dp"
            android:layout_marginRight="@dimen/margin_18dp"
            android:background="@color/line_login_top" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="@dimen/margin_28dp"
                android:layout_height="@dimen/margin_28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_18dp"
                android:src="@drawable/selector_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="clip_vertical"
                android:layout_marginLeft="@dimen/margin_13dp"
                android:layout_marginRight="@dimen/margin_18dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:background="@null"
                android:digits="0123456789abcdefjhigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:drawablePadding="16dp"
                android:hint="@string/please_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/font_size_24" />

            <ImageView
                android:id="@+id/iv_login_eye"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="34dp"
                android:src="@drawable/selector_login_eye" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_18dp"
            android:layout_marginRight="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/line_login_top" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/selector_bg_btn_login"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="设置"
            android:textColor="@color/pop_selected"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20dp"
            android:gravity="center_vertical"
            android:text="@string/forget_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/font_size_14"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_40dp"
        android:layout_marginLeft="@dimen/margin_28dp"
        android:layout_marginRight="@dimen/margin_28dp">

        <ImageView
            android:layout_marginLeft="@dimen/margin_5dp"
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/margin_50dp"
            android:layout_height="@dimen/margin_25dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_toRightOf="@id/iv_logo"
            android:text="@string/copyright"
            android:textColor="@color/text_sub_dark"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:layout_marginRight="@dimen/margin_5dp"
            android:id="@+id/tv_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/version_code"
            android:textColor="@color/text_black"
            android:textSize="@dimen/font_size_16" />
    </RelativeLayout>
</RelativeLayout>